[gd_scene load_steps=20 format=2]

[ext_resource path="res://levels/Level1_2.tmx" type="PackedScene" id=1]
[ext_resource path="res://levels/Level1_2.gd" type="Script" id=2]
[ext_resource path="res://Teleport.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/Level1_3.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/Door.tscn" type="PackedScene" id=5]
[ext_resource path="res://items/Sconce.tscn" type="PackedScene" id=6]
[ext_resource path="res://SpawnArea.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/Destructible.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/Level1SmallBlock.tres" type="Texture" id=9]
[ext_resource path="res://levels/Level1Block.tres" type="Texture" id=10]
[ext_resource path="res://items/MoneyBag.tscn" type="PackedScene" id=11]
[ext_resource path="res://items/HiddenTreasure.tscn" type="PackedScene" id=12]
[ext_resource path="res://levels/LevelSetup.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 208 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 224, 27 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.5, 27.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 246, 79.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 247.5, 57.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15.5, 2.5 )

[node name="Level1_2" type="Node2D"]
script = ExtResource( 2 )

[node name="Level1_2" parent="." instance=ExtResource( 1 )]

[node name="Destructible" parent="." instance=ExtResource( 8 )]
position = Vector2( 264, 136 )
texture = ExtResource( 9 )

[node name="Destructible3" parent="." instance=ExtResource( 8 )]
position = Vector2( 472, 328 )
texture = ExtResource( 10 )

[node name="Destructible2" parent="." instance=ExtResource( 8 )]
position = Vector2( 264, 152 )
drop = "porkchop"
texture = ExtResource( 9 )

[node name="Sconces" type="Node2D" parent="."]

[node name="Sconce" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 97, 50 )

[node name="Sconce16" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 478, 50 )

[node name="Sconce2" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 160, 34 )

[node name="Sconce3" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 223, 115 )

[node name="Sconce4" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 32, 146 )
drop = "yellow$700"

[node name="Sconce5" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 31, 273 )

[node name="Sconce6" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 95, 273 )

[node name="Sconce7" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 162, 273 )

[node name="Sconce8" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 224, 273 )

[node name="Sconce9" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 288, 273 )
drop = "clock"

[node name="Sconce10" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 350, 273 )

[node name="Sconce11" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 417, 273 )

[node name="Sconce12" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 497, 273 )

[node name="Sconce13" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 353, 146 )

[node name="Sconce14" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 302, 34 )

[node name="Sconce15" parent="Sconces" instance=ExtResource( 6 )]
position = Vector2( 415, 16 )
drop = "rosary"

[node name="SimonSpawn" type="Node2D" parent="."]
position = Vector2( 37, 64 )

[node name="GoDown1" parent="." instance=ExtResource( 3 )]
position = Vector2( 71, 185 )
destinationNode = NodePath("../GoUp1")
newCameraY = 304

[node name="GoUp1" parent="." instance=ExtResource( 3 )]
position = Vector2( 39, 232 )
destinationNode = NodePath("../GoDown1")
direction = 1

[node name="GoDown2" parent="." instance=ExtResource( 3 )]
position = Vector2( 391, 184 )
destinationNode = NodePath("../GoUp2")
newCameraY = 304

[node name="GoUp2" parent="." instance=ExtResource( 3 )]
position = Vector2( 360, 232 )
destinationNode = NodePath("../GoDown2")
direction = 1

[node name="Door" parent="." instance=ExtResource( 5 )]
position = Vector2( 520, 40 )
nextLevel = ExtResource( 4 )
nextLevelPosition = Vector2( 512, 0 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 512, 0 )

[node name="OutsideBorder" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( -10, 208 )
shape = SubResource( 1 )

[node name="DeathArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2( 217.5, 411 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DeathArea"]
position = Vector2( 510.5, 411.5 )
shape = SubResource( 3 )

[node name="BatSpawnArea" parent="." instance=ExtResource( 7 )]
enemy = "bat"
maxEnemies = 1
minSpawnTime = 3.0
maxSpawnTime = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BatSpawnArea"]
position = Vector2( 255, 79.5 )
shape = SubResource( 4 )

[node name="FishmanSpawnArea" parent="." instance=ExtResource( 7 )]
enemy = "fishman"

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishmanSpawnArea"]
position = Vector2( 251, 327 )
shape = SubResource( 5 )

[node name="SecretArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecretArea"]
position = Vector2( 463.5, 382.5 )
shape = SubResource( 6 )

[node name="HiddenTreasure" parent="SecretArea" instance=ExtResource( 12 )]
position = Vector2( 353, 328 )

[node name="Treasure" parent="SecretArea/HiddenTreasure" instance=ExtResource( 11 )]
points = 1000
type = 3
autostartTtl = false

[node name="SecretMask" type="Sprite" parent="SecretArea/HiddenTreasure"]
position = Vector2( 7, 0 )
texture = ExtResource( 10 )

[node name="SecretMask2" type="Sprite" parent="SecretArea/HiddenTreasure"]
position = Vector2( -9, 0 )
texture = ExtResource( 10 )

[node name="LevelSetup" type="Node" parent="."]
script = ExtResource( 13 )
stage = 2

[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="body_entered" from="SecretArea" to="." method="_on_SecretArea_body_entered"]
[connection signal="body_exited" from="SecretArea" to="." method="_on_SecretArea_body_exited"]
